# rustless-example

./: Cargo.toml  Makefile  docker-compose.yml  test.sh
docker/app/: Dockerfile  data.Dockerfile
docker/postgres/: setup.sh
docker/rust/: rust.Dockerfile
rustless-example/: Cargo.toml  migrate.sh  run.sh
rustless-example/src/models/: tweet.rs
src/: main.rs
