[package]

name = "postgres_example"
version = "0.0.1"
authors = ["Stanislav Panferov <fnight.m@gmail.com>"]

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
postgres = "*"
r2d2 = "*"
r2d2_postgres = "*"
typemap = "*"
time = "*"
rustc-serialize = "*"
iron = "*"
docopt = "*"
docopt_macros = "*"
uuid = "*"
jsonway = "*"
valico = "*"
url = "*"
regex = "*"
regex_macros = "*"
dsl_macros = "*"

[dependencies.rustless]
git = "https://github.com/adamreeve/rustless.git"

[dependencies.deuterium_plugin]
git = "https://github.com/adamreeve/deuterium-orm.git"

[dependencies.deuterium_orm]
git = "https://github.com/adamreeve/deuterium-orm.git"
